# claw-design

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
prompts/: claude-design-sys-prompt.zh-CN.txt
src/: extract.rs  main.rs  office.rs
