[package]
name = "claw-design"
version = "0.1.0"
edition = "2021"
description = "Claude Design 提示词归档与 Rust 工具链（解析工具清单、检视 Office zip 结构）"
license = "MIT"
readme = "README.md"
repository = "https://github.com/agenmod/claw-design"
keywords = ["claude", "design", "prompt", "tools"]
categories = ["command-line-utilities"]

[[bin]]
name = "claw-design"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
